<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.thirdmadman.drawlots.drawlots.MainScreeen">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/inputFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorFlatBackgroudOpacity"
        android:visibility="visible"
        tools:layout_editor_absoluteX="60dp"
        tools:layout_editor_absoluteY="0dp">

        <EditText
            android:id="@+id/editTextTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="24dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="14sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/mainTextTitle"
            app:layout_constraintEnd_toStartOf="@+id/addTitleText"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="24dp" />

        <ImageView
            android:id="@+id/addTitleImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toTopOf="@+id/mainTextTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@android:drawable/ic_menu_add"
            android:layout_marginRight="16dp" />

        <TextView
            android:id="@+id/addTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:layout_marginEnd="8dp"
            android:text="@string/addTitleText"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/mainTextTitle"
            app:layout_constraintEnd_toStartOf="@+id/addTitleImg"
            android:layout_marginRight="8dp" />

        <TextView
            android:id="@+id/mainTextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="116dp"
            android:text="@string/main_text_title"
            android:textColor="@color/colorFlatText"
            android:textSize="30sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <MultiAutoCompleteTextView
            android:id="@+id/variantsText"
            android:layout_width="278dp"
            android:layout_height="276dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:text="@string/variants_text"
            android:textAlignment="center"
            android:textColor="@color/colorFlatText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainTextTitle" />

        <Button
            android:id="@+id/startGameButton"
            android:layout_width="213dp"
            android:layout_height="48dp"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@color/colorFlatBackgroudLight"
            android:text="@string/start_game_button"
            android:textColor="@color/colorFlatText"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/showFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorFlatBackgroudOpacity"
        android:visibility="invisible"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="43dp">

        <ImageView
            android:id="@+id/stopGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.953"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.015"
            app:srcCompat="@android:drawable/ic_delete"
            android:layout_marginLeft="8dp" />

        <TextView
            android:id="@+id/resultTextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="116dp"
            android:text="@string/result_text_title"
            android:textAlignment="center"
            android:textColor="@color/colorFlatText"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/resultText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="156dp"
            android:capitalize="none"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resultTextTitle" />

        <Button
            android:id="@+id/showResultButton"
            android:layout_width="213dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@color/colorFlatBackgroudLight"
            android:text="@string/show_result_button"
            android:textColor="@color/colorFlatText"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
